--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,92 @@
-.App {
-width: 100%;
-margin-top: 50px;
+body {
+  background-color: #448aff;
 }
 
-.current-date {
-  width: 60% ;
+.App {
+width: 100%;
+}
+
+.header {
   height: 80px;
   background-color: #448aff;
   color: white;
-  margin: 0 auto;
-  margin-top: 30px;
-  padding: 25px 0px 25px 0px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  padding: 20px 0px 20px 0px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
 }
 
-.current-date div:nth-of-type(1) {
+.header div:nth-of-type(1) {
   font-size: 35px;
-  margin: 0px 20px 0px 20px;
 }
 
-.current-date div:nth-of-type(2) {
+.header div:nth-of-type(2) {
   font-size: 20px;
-  margin: 0px 20px 0px 20px;
+}
+
+.date-wrapper {
+  margin: 5px 10px 5px 20px;
+  padding: 0
+}
+
+.event-display {
+  display: grid;
+  justify-content: space-around;
+  grid-template-columns: 2fr 3fr;
+  height: 60px;
+  padding: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+#event-details {
+  display: flex;
+}
+
+#event-details h1, h2 {
+  margin: 0px;
+  padding: 0px;
+  font-size: 20px;
+}
+
+#event-btns {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-left: 10px;;
+}
+
+#event-btns button {
+  border: none;
+  border-radius: 3px;
+  padding: 3px 5px 3px 5px;
+  color: white;
+  background-color: transparent;
+  border: 1px solid white;
+}
+
+#event-btns button:hover {
+  color: black;
+  background-color: white;
+}
+
+@media (max-width: 1200px) {
+  .header {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 600px) {
+  .header {
+    grid-template-columns: 2fr 3fr;
+  }
+
+  .event-display {
+    grid-template-columns: 1fr;
+  }
+
+  #event-notes p {
+    display: none;
+  }
 }
 
 .days-of-the-week {
@@ -33,18 +97,14 @@ margin-top: 50px;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   text-align: center;
-  width: 60%;
+  width: 100%;
   margin: 0 auto;
-}
-
-.days-of-the-week div:nth-of-type(8) {
-  width: 30px;
 }
 
 #current-day-button {
   margin: 0 auto;
   height: 30px;
-  width: 60%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,12 +120,24 @@ margin-top: 50px;
   grid-row-gap: 0px;
   grid-column-gap: 0px;
   justify-content: center;
-  width: 60%;
-  height: 400px;
+  width: 100%;
+  height: 300px;
   overflow-y: scroll;
   margin: 0 auto;
   background-color: rgb(243, 243, 243);
   padding:0px;
+}
+
+@media (max-width: 411px) {
+  .calender-interface {
+    width: 411px;
+  }
+}
+
+@media (min-height: 940px) {
+  .calender-interface {
+    height: 550px;
+  }
 }
 
 .calender-row {
@@ -74,7 +146,8 @@ margin-top: 50px;
   list-style-type: none;
   padding: 0px; 
   margin:0px; 
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
   justify-content: space-between;
   align-items: center;
   text-align: center;
@@ -82,12 +155,16 @@ margin-top: 50px;
 }
 
 .calender-node {
-  width: 14.2%;
+  width: 100%;
   height: 60px;
-  display: flex;
   justify-content: center;
   align-content: center;
   position: relative;
+  display: flex;
+}
+
+.calender-color {
+  position: absolute;
 }
 
 .current-day {
@@ -128,4 +205,139 @@ margin-top: 50px;
   background-color:#448aff;
   border-radius: 50px;
   color: white;
+}
+
+.date-add{
+  animation-name: displaydate;
+  animation-duration: .2s;
+}
+
+.date-remove {
+  animation-name: removedate;
+  animation-duration: .5s;
+}
+
+.event-adder-wrapper {
+  background-color:#448aff;
+  width: 100%;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  position: absolute;
+}
+
+.event-button {
+  width: 90px;
+  border: 0px;
+  background-color:#7eb5fd;
+  color: white;
+  padding: 10px 15px 10px 15px;
+  border-radius: 3px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.form-wrap {
+  width: 500px;
+  height: 180px;
+  margin: 0 auto;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  background-color: rgba(68, 97, 145, 1);
+  color: white;
+  position: relative;
+}
+
+.form-wrap form {
+  text-align: center;
+}
+
+.form-wrap form div:nth-last-child(1) {
+  margin-left: 10px;
+}
+
+.form-wrap form > div {
+  margin: 0px 10px 0px 20px;
+  padding-top: 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: left;
+}
+
+.form-wrap form div > div {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-wrap form div div > div {
+  display: flex;
+  flex-direction: column;
+  font-size: 10px;
+  color: red;
+  position: relative;
+}
+
+.form-wrap form div div > input {
+  border: none;
+  border-radius: 3px;
+  padding: 4px 9px 4px 9px;
+}
+
+.form-wrap button {
+  border-radius: 3px;
+  border: none;
+  padding: 4px 9px 4px 9px;
+  width: 70px;
+  margin-top: 20px;
+  color: white;
+  border: 2px solid white;
+  background: transparent;
+}
+
+.form-wrap button:hover {
+  color: black;
+  background: white;
+}
+
+#edit-color {
+  position: absolute;
+  right: 160px;
+  top: 26px;
+  border-radius: 10px;
+}
+
+.title-input p {
+  position: absolute;
+  top: 46px;
+  left: 20px;
+  font-size: 13px;
+  color: red;
+}
+
+.color-input p {
+  position: absolute;
+  top: 46px;
+  left: 20px;
+  font-size: 13px;
+  color: red;
+}
+
+.date-input p {
+  position: absolute;
+  top: 110px;
+  left: 20px;
+  font-size: 13px;
+  color: red;
+}
+
+.time-input p {
+  position: absolute;
+  top: 46px;
+  left: 20px;
+  font-size: 13px;
+  color: red;
 }
